--- a/w2/index.html
+++ b/w2/index.html
@@ -41,7 +41,7 @@
             var url = new URL(urlString);
 
             // Make a websocket connection
-            var ws = new WebSocket(`ws://localhost:8000/ws`);
+            var ws = new WebSocket(`wss://8000-ebuwaevbuom-coursepytho-qh0k78w2j7i.ws-us98.gitpod.io/ws`);
 
             // On receiving a message, append it to the unordered list `messages`
             function processMessage(event) {
